# slimescrubber

./: Cargo.toml  pihole
src/: main.rs
